--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Matching Pairs Game!</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   </head>
   <body>
@@ -14,34 +14,58 @@
       </section>
 
       <ul class="deck">
-        <li class="card">
+        <li class="card" data-name="anchor">
           <i class="fa fa-anchor"></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="bell">
           <i class="fa fa-bell"></i>
         </li>
-        <li class="card">
-          <i class="fa fa-database"></i>
+        <li class="card" data-name="database">
+          <i class="fa fa-database" ></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="headphones">
           <i class="fa fa-headphones"></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="key">
           <i class="fa fa-key"></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="infinity">
           <i class="fa fa-infinity"></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="save">
           <i class="fa fa-save"></i>
         </li>
-        <li class="card">
+        <li class="card" data-name="pallet">
+          <i class="fa fa-pallet"></i>
+        </li>
+        <li class="card" data-name="anchor">
+          <i class="fa fa-anchor"></i>
+        </li>
+        <li class="card" data-name="bell">
+          <i class="fa fa-bell"></i>
+        </li>
+        <li class="card" data-name="database">
+          <i class="fa fa-database" ></i>
+        </li>
+        <li class="card" data-name="headphones">
+          <i class="fa fa-headphones"></i>
+        </li>
+        <li class="card" data-name="key">
+          <i class="fa fa-key"></i>
+        </li>
+        <li class="card" data-name="infinity">
+          <i class="fa fa-infinity"></i>
+        </li>
+        <li class="card" data-name="save">
+          <i class="fa fa-save"></i>
+        </li>
+        <li class="card" data-name="pallet">
           <i class="fa fa-pallet"></i>
         </li>
       </ul>
 
     </div>
-    <script src="/js/app.js">
+    <script src="js/app.js">
 
     </script>
   </body>
