--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Matching Pairs Game!</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   </head>
   <body>
     <div class="container">
+      <header>
+        <h1>Memory Game</h1>
+      </header>
 
-      <section>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed accumsan nibh. Pellentesque posuere turpis et accumsan ullamcorper. Pellentesque luctus tincidunt turpis, et consectetur enim consequat non. Vestibulum elementum ipsum sit amet ligula malesuada, semper sagittis ante accumsan. Quisque ut ex in magna viverra egestas. Aliquam id tempus nibh. Sed a nunc at purus lacinia consectetur. Duis dictum vitae justo malesuada facilisis. Donec id vestibulum orci. Pellentesque finibus, tortor id vehicula facilisis, mauris neque facilisis eros, sed mattis lorem tortor at metus. In ultricies scelerisque euismod. Ut blandit fermentum tortor. Sed pretium ante iaculis ligula dignissim placerat. In tempus lorem quis neque lobortis pretium. Aliquam sed pellentesque odio.
+      <section class="score-panel">
+        <ul class="stars">
+          <li><i class="fa fa-star" ></i></li>
+          <li><i class="fa fa-star" ></i></li>
+          <li><i class="fa fa-star" ></i></li>
+        </ul>
+
+        <span class="moves">0</span>
+        <span class="textMoves">Moves</span>
+
+        <div class="restart">
+          <i class="fas fa-redo"></i>
+        </div>
       </section>
 
       <ul class="deck">
@@ -63,10 +78,8 @@
           <i class="fa fa-pallet"></i>
         </li>
       </ul>
-
     </div>
-    <script src="js/app.js">
 
-    </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
