feat: Click event for reset button
Added a click event for reset button which calls on the reset() function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="moves">0</span>
         <span class="textMoves">Moves</span>
 
-        <div class="restart">
+        <div class="restart" onclick=reset()>
           <i class="fas fa-redo"></i>
         </div>
       </section>
