--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <span class="moves">0</span>
         <span class="textMoves">Moves</span>
 
+        <div class="timer">
+        </div>
+
         <div class="restart" onclick=reset()>
           <i class="fas fa-redo"></i>
         </div>
