--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Matching Pairs Game!</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Matching Pairs Game!</title>
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+</head>
   <body>
     <div class="container">
       <header>
@@ -15,9 +15,9 @@
 
       <section class="score-panel">
         <ul class="stars">
-          <li><i class="fa fa-star" ></i></li>
-          <li><i class="fa fa-star" ></i></li>
-          <li><i class="fa fa-star" ></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
         </ul>
 
         <span class="moves">0</span>
@@ -26,7 +26,7 @@
         <div class="timer">
         </div>
 
-        <div class="restart" onclick=reset()>
+        <div class="restart" onclick="reset()">
           <i class="fas fa-redo"></i>
         </div>
       </section>
@@ -39,7 +39,7 @@
           <i class="fa fa-bell"></i>
         </li>
         <li class="card" data-name="database">
-          <i class="fa fa-database" ></i>
+          <i class="fa fa-database"></i>
         </li>
         <li class="card" data-name="headphones">
           <i class="fa fa-headphones"></i>
@@ -63,7 +63,7 @@
           <i class="fa fa-bell"></i>
         </li>
         <li class="card" data-name="database">
-          <i class="fa fa-database" ></i>
+          <i class="fa fa-database"></i>
         </li>
         <li class="card" data-name="headphones">
           <i class="fa fa-headphones"></i>
@@ -81,6 +81,18 @@
           <i class="fa fa-pallet"></i>
         </li>
       </ul>
+      <div id="congratsModal" class="modal">
+        <div class="modal-content">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <h3>Well Done! Congrats!</h3>
+          <p>You made a total of <span id="total-moves"></span> moves </p>
+          <p>with a time of <span id="final-time"></span></p>
+          <p>Your Rating: <span id="final-rating"></span></p>
+          <div class="play-again" onclick="reset(); closeModal();">
+            Play Again!
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
